--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:27.+'
     testCompile 'junit:junit:4.12'
-
+    compile "io.reactivex.rxjava2:rxjava:2.1.12"
     implementation "com.android.support:design:27.+"
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile project(':skin-core')
